@@ -155,7 +155,7 @@ public class UtilsTest {
      */
     @Test
     public void joinAsHtmlUnorderedList() {
-        List<? extends Object> items = Arrays.asList("1", new Integer(2));
+        List<? extends Object> items = Arrays.asList("1", Integer.valueOf(2));
         assertEquals("<ul><li>1</li><li>2</li></ul>", Utils.joinAsHtmlUnorderedList(items));
         assertEquals("<ul></ul>", Utils.joinAsHtmlUnorderedList(Collections.emptyList()));
     }
